Big patch, did a general cleanup and rewrote most of the classes. Made the deaths persistent across resets. Added possibility of using the Essentials plugin Displaynames on the scoreboards and hex coloring aswell.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,6 +7,9 @@ tracked-words:
 # Whether to match whole words only (true) or substrings (false)
 match-whole-word: true
 
+# If you want the scoreboard to support Essentials "nicknames" change to 'true'
+use-nicknames: true
+
 # Internal scoreboard objective name (not shown to players)
 objective-name: wordCount
 
